@@ -749,3 +749,103 @@ func (cm *ChampionshipManager) RestartEvent(championshipID string, eventID strin
 
 	return cm.StartEvent(championshipID, eventID)
 }
+
+func (cm *ChampionshipManager) ListAvailableResultsFilesForEvent(championshipID string, eventID string) (*ChampionshipEvent, []SessionResults, error) {
+	championship, err := cm.LoadChampionship(championshipID)
+
+	if err != nil {
+		return nil, nil, err
+	}
+
+	event, err := championship.EventByID(eventID)
+
+	if err != nil {
+		return nil, nil, err
+	}
+
+	results, err := ListAllResults()
+
+	if err != nil {
+		return nil, nil, err
+	}
+
+	var filteredResults []SessionResults
+
+	for _, result := range results {
+		if result.TrackName == event.RaceSetup.Track && result.TrackConfig == event.RaceSetup.TrackLayout {
+			filteredResults = append(filteredResults, result)
+		}
+	}
+
+	return event, filteredResults, nil
+}
+
+func (cm *ChampionshipManager) ImportEvent(championshipID string, eventID string, r *http.Request) error {
+	if err := r.ParseForm(); err != nil {
+		return err
+	}
+
+	championship, err := cm.LoadChampionship(championshipID)
+
+	if err != nil {
+		return err
+	}
+
+	event, err := championship.EventByID(eventID)
+
+	if err != nil {
+		return err
+	}
+
+	event.Sessions = make(map[SessionType]*ChampionshipSession)
+
+	if practiceFile := r.FormValue("PracticeResult"); practiceFile != "" {
+		results, err := LoadResult(practiceFile + ".json")
+
+		if err != nil {
+			return err
+		}
+
+		event.Sessions[SessionTypePractice] = &ChampionshipSession{
+			StartedTime:   results.Date.Add(-time.Minute * 30),
+			CompletedTime: results.Date,
+			Results:       results,
+		}
+
+		event.CompletedTime = results.Date
+	}
+
+	if qualifyingFile := r.FormValue("QualifyingResult"); qualifyingFile != "" {
+		results, err := LoadResult(qualifyingFile + ".json")
+
+		if err != nil {
+			return err
+		}
+
+		event.Sessions[SessionTypeQualifying] = &ChampionshipSession{
+			StartedTime:   results.Date.Add(-time.Minute * 30),
+			CompletedTime: results.Date,
+			Results:       results,
+		}
+
+		event.CompletedTime = results.Date
+	}
+
+	if raceFile := r.FormValue("RaceResult"); raceFile != "" {
+		results, err := LoadResult(raceFile + ".json")
+
+		if err != nil {
+			return err
+		}
+
+		event.Sessions[SessionTypeRace] = &ChampionshipSession{
+			StartedTime:   results.Date.Add(-time.Minute * 30),
+			CompletedTime: results.Date,
+			Results:       results,
+		}
+
+		event.CompletedTime = results.Date
+	}
+
+	return cm.UpsertChampionship(championship)
+}
